fix hamburger not showing

--- a/client/src/modules/shared/navigation/navigation.css
+++ b/client/src/modules/shared/navigation/navigation.css
@@ -86,7 +86,6 @@
 	justify-content: center;
 	align-items: center;
 	width: 40px;
-	height: 40px;
 	background: none;
 	border: none;
 	cursor: pointer;
@@ -103,8 +102,12 @@
 }
 .mobile-nav-links {
 	display: none;
+	list-style: none;
 	flex-direction: column;
 	gap: 1rem;
+}
+.mobile-nav-links a{
+		color: #000;
 }
 nav .inner-wrapper {
 	display: flex;
